# opengl-rendering

./: CMakeLists.txt
include/: Camera.h  my_shaders.h  render_programs.h  utils.h
include/glad/: glad.h
lib/: libglfw.3.5.dylib
shaders/: crate_tex.frag  cubes.frag  green.frag  green_tri.frag  transform.frag  transform.vert  tri.frag  tri.vert  tri_crate_tex.vert  tri_flip.vert  tri_tex.frag
src/: Camera.cpp  glad.c  main.cpp  my_shaders.cpp  render_programs.cpp  utils.cpp
